kerberos: Don't leak the object path from sign_in_identity

https://bugzilla.gnome.org/show_bug.cgi?id=768845